[tool.poetry]
name = "packet-sniffer"
version = "2.0.1"
description = "A Network Packet Sniffing tool developed in Python 3"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyinstaller = "^5.1"
netprotocols = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[package]]
name = "altgraph"
version = "0.17.2"
description = "Python graph (network) package"
category = "main"
optional = false
python-versions = "*"

[[package]]
name = "future"
version = "0.18.2"
description = "Clean single-source support for Python 3 and 2"
category = "main"
optional = false
python-versions = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*"

[[package]]
name = "macholib"
version = "1.16"
description = "Mach-O header analysis and editing"
category = "main"
optional = false
python-versions = "*"

[package.dependencies]
altgraph = ">=0.15"

[[package]]
name = "netprotocols"
version = "0.5.0"
description = "Low-level implementations of common networking protocols"
category = "main"
optional = false
python-versions = ">=3.7,<4.0"

[[package]]
name = "pefile"
version = "2022.5.30"
description = "Python PE parsing module"
category = "main"
optional = false
python-versions = ">=3.6.0"

[package.dependencies]
future = "*"

[[package]]
name = "pyinstaller"
version = "5.1"
description = "PyInstaller bundles a Python application and all its dependencies into a single package."
category = "main"
optional = false
python-versions = "<3.11,>=3.7"

[package.dependencies]
altgraph = "*"
macholib = {version = ">=1.8", markers = "sys_platform == \"darwin\""}
pefile = {version = ">=2017.8.1", markers = "sys_platform == \"win32\""}
pyinstaller-hooks-contrib = ">=2021.4"
pywin32-ctypes = {version = ">=0.2.0", markers = "sys_platform == \"win32\""}

[package.extras]
encryption = ["tinyaes (>=1.0.0)"]
hook_testing = ["pytest (>=2.7.3)", "execnet (>=1.5.0)", "psutil"]

[[package]]
name = "pyinstaller-hooks-contrib"
version = "2022.7"
description = "Community maintained hooks for PyInstaller"
category = "main"
optional = false
python-versions = ">=3.7"

[[package]]
name = "pywin32-ctypes"
version = "0.2.0"
description = ""
category = "main"
optional = false
python-versions = "*"

[metadata]
lock-version = "1.1"
python-versions = ">=3.8,<3.11"
content-hash = "78136abc64e48510fd707b805816a30ccb4437f079c951c6fbc5db55bcfc2a32"

[metadata.files]
altgraph = [
    {file = "altgraph-0.17.2-py2.py3-none-any.whl", hash = "sha256:743628f2ac6a7c26f5d9223c91ed8ecbba535f506f4b6f558885a8a56a105857"},
    {file = "altgraph-0.17.2.tar.gz", hash = "sha256:ebf2269361b47d97b3b88e696439f6e4cbc607c17c51feb1754f90fb79839158"},
]
future = [
    {file = "future-0.18.2.tar.gz", hash = "sha256:b1bead90b70cf6ec3f0710ae53a525360fa360d306a86583adc6bf83a4db537d"},
]
macholib = [
    {file = "macholib-1.16-py2.py3-none-any.whl", hash = "sha256:5a0742b587e6e57bfade1ab90651d4877185bf66fd4a176a488116de36878229"},
    {file = "macholib-1.16.tar.gz", hash = "sha256:001bf281279b986a66d7821790d734e61150d52f40c080899df8fefae056e9f7"},
]
netprotocols = [
    {file = "netprotocols-0.5.0-py3-none-any.whl", hash = "sha256:8ad5164d859c3002b5142e377f488240e0fa8e7a599bd5da65934ae8274f944b"},
    {file = "netprotocols-0.5.0.tar.gz", hash = "sha256:d3af524bfff50ac279e0dac08f13eefbb86db34be5c39af4204d271a1f6aceb3"},
]
pefile = [
    {file = "pefile-2022.5.30.tar.gz", hash = "sha256:a5488a3dd1fd021ce33f969780b88fe0f7eebb76eb20996d7318f307612a045b"},
]
pyinstaller = [
    {file = "pyinstaller-5.1-py3-none-macosx_10_13_universal2.whl", hash = "sha256:3c9bc373b4a4bf6d81b306b9918e290a3de582d7b50a0f6f4e837970a4db0c54"},
    {file = "pyinstaller-5.1-py3-none-manylinux2014_aarch64.whl", hash = "sha256:ac003d49bbd62f6712b5631487049cee4f0a07445dd31c6d05e5724e33689fca"},
    {file = "pyinstaller-5.1-py3-none-manylinux2014_i686.whl", hash = "sha256:f786cb013ebfd3fb23ddb46285902663e31256220b12b368f8c36e859a77ebc9"},
    {file = "pyinstaller-5.1-py3-none-manylinux2014_ppc
